# crypto-data-aggregator-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/core/: config.py  rate_limit.py
app/database/: __init__.py  rabbitmq.py  redis.py  session.py
app/modules/alerts/: models.py  repositories.py  router.py  schemas.py  services.py
app/modules/rates/: router.py  schemas.py
app/modules/users/: dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
app/workers/checker/: main.py
app/workers/parser/: main.py  service.py
app/workers/parser/adapters/: __init__.py  base.py  binance.py  coingecko.py
app/workers/sender/: http_client.py  main.py  repository.py  service.py
docs/: README.ru.md
migrations/: env.py
migrations/versions/: 7fc8d644de92_add_dispatch_log_table.py  e4cd33464577_initial_migration.py  e5cbb98b4af2_add_partial_unique_index_alerts.py
tests/: conftest.py  test_alerts.py  test_rate_limit.py  test_users.py
