[project]
name = "crypto-data-aggregator-api"
version = "0.0.0"
description = "High-performance async service for cryptocurrency price aggregation with Redis caching and RabbitMQ-based alerts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
